--- a/example.env
+++ b/example.env
@@ -1,4 +1,6 @@
 # rename to .env and put credentials here
+
+# (optional when enabled in config) email credentials
 EMAIL_PORT=465
 EMAIL_SMTP_SERVER=smtp.gmail.com
 EMAIL_SENDER_EMAIL=my@gmail.com
